2009-03-30  higepon  <higepon@users.sourceforge.jp>

        * configure.ac/Makefile.am : Mingw patch by .mjt.

        * Fixed the bug of transcoded-port and external representation of port by Will.Donnelly.

        * lib/mosh/test.ss (test-external-rep): Added.

2009-03-29  higepon  <higepon@users.sourceforge.jp>

        * Fasl.cpp : Improved Fasl write/read of Record & RTD.

2009-03-28  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/test2.ss (mosh): Trying new test system.

2009-03-26  higepon  <higepon@users.sourceforge.jp>

        * Added (srfi :64 testing)

        * lib/srfi/%3a64.sls: Now porting.

2009-03-25  higepon  <higepon@users.sourceforge.jp>

        * test-data.scm : Modified some tests.

        * test/test.bat: Addex execute of R6RS test suite.

        * Removed type "word" and use "intptr_t" instead.

        * UtilityProcedures.cpp: Patch for Mingw by .mjt.

        * Bignum.h : Fixed add, sub and mul.

2009-03-24  higepon  <higepon@users.sourceforge.jp>

        * test/test.bat: Added for tests on Windows.

        * Added O_BINARY flag for open (_WIN32 only).

        * LineBufferedFileBinaryInputOutputPort.h (scheme): Fixed the bug.

        * test-data.scm: Added tests for round.

        * Ratnum.cpp (round): Fixed the bug of round procedure.

2009-03-23  higepon  <higepon@users.sourceforge.jp>

        * win/win.cpp: UC moved to ucs4string.cpp for Mingw.

        * gtest-1.2.1/src/gtest.cc: Added code for Mingw.

        * UtilityProcedures.cpp (scheme::localTzOffsetEx): Added code for Mingw.

        * ScannerHelper.cpp: _WIN32 => _MSC_VER.

        * Flonum.h : _WIN32 => _MSC_VER.

        * Bignum.h (scheme): Not to use long.

        * CompilerProcedures.cpp (enum): Added prefix TAG_ for compatibility on compilation.

        * test/input-output-port.scm (rm): Added rm procedure not using shell command.
                                     (cp): Rewrote cp procedure for Windows.

        * Bignum.h: Fixed __WORDSIZE.
