@@ -38,6 +38,7 @@
 #include "TextualOutputPort.h"
 #include "Reader.h"
 #include "ProcedureMacro.h"
+#include "Scanner.h"
 
 using namespace scheme;
 
@@ -51,6 +52,8 @@ Object Reader::read(TextualInputPort* port, bool& errorOccured)
     in_ = port;
     for (;;) {
         const bool isParseError = yyparse() == 1;
+        port->scanner()->emptyBuffer();
+//        LOG1("parsed=~a\n", parsed);
         if (isParseError) {
             errorOccured = true;
             return Object::Undef;
