@@ -69,12 +69,29 @@ Scanner::~Scanner()
 {
 }
 
+// Since re2c greedy look-aheads,
+// we need to give back read buffer to input-port.
+void Scanner::emptyBuffer()
+{
+    TextualInputPort* const inputPort = Reader::port();
 
-// static void yydebug(int state, ucs4char ch)
-// {
-// //    printf("state=%d ch=[%c] ch=%x\n", state, ch, ch);
-// }
+    for (ucs4char* p = limit_ - 1; p >= cursor_; p--) {
+        // special case
+        if (eofP_ && p == limit_ - 1 && *p == '\0') {
+            continue;
+        } else {
+            inputPort->unGetChar(*p);
+        }
+    }
 
+    // even if port reaches EOF, we turns off this flag.
+    // fill() will detect EOF.
+    eofP_ = false;
+    cursor_ = buffer_;
+    limit_ = buffer_;
+    token_ = buffer_;
+    marker_ = buffer_;
+}
 
 void Scanner::fill(int n)
 {
