@@ -186,6 +186,7 @@
    (let ([port (open-file-input/output-port file (file-options no-fail no-truncate) mode (make-transcoder (utf-16-codec)))])
      (test-true (input-port? port))
      (test-equal (read port) "あいう")
+     (test-equal (read-char port) #\newline)
      (test-true (port-eof? port))
      (close-port port))))
 
